package com.mhm.action.interpreter;

/**
 * expression4J
 * @author MHm
 * @date 2020-4-20 18:50
 */
public abstract class Expression {
    public abstract int interpret(ExpressionContext con);
}
